cf_analysis_results/checkerframework_3.42.0_results/url47e6aca666_pocorall_automaton_tgz-pJ8-net_pocorall_automaton_DatatypesJ8.txt
../dataset/june2020_dataset/url47e6aca666_pocorall_automaton_tgz-pJ8-net_pocorall_automaton_DatatypesJ8/src/net/pocorall/automaton/Datatypes.java:477: error: (required.method.not.called) $$ 4 $$ method close $$ url.openStream() $$ java.io.InputStream $$ possible exceptional exit due to new ObjectInputStream(url.openStream()) with exception type java.io.IOException $$ ( 34936, 34952 ) $$ @MustCall method close may not have been invoked on url.openStream() or any of its aliases.
			return (DefaultAutomaton) new ObjectInputStream(url.openStream()).readObject();
			                                                              ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: possible exceptional exit due to new ObjectInputStream(url.openStream()) with exception type java.io.IOException
../dataset/june2020_dataset/url47e6aca666_pocorall_automaton_tgz-pJ8-net_pocorall_automaton_DatatypesJ8/src/net/pocorall/automaton/Datatypes.java:492: error: (required.method.not.called) $$ 4 $$ method close $$ new FileOutputStream(dir + "/" + name + ".aut") $$ java.io.FileOutputStream $$ possible exceptional exit due to new ObjectOutputStream((new FileOutputStream(dir + "/" + name + ".aut"))) with exception type java.io.IOException $$ ( 35347, 35394 ) $$ @MustCall method close may not have been invoked on new FileOutputStream(dir + "/" + name + ".aut") or any of its aliases.
			ObjectOutputStream o = new ObjectOutputStream((new FileOutputStream(dir + "/" + name + ".aut")));
			                                               ^
  The type of object is: java.io.FileOutputStream.
  Reason for going out of scope: possible exceptional exit due to new ObjectOutputStream((new FileOutputStream(dir + "/" + name + ".aut"))) with exception type java.io.IOException
../dataset/june2020_dataset/url47e6aca666_pocorall_automaton_tgz-pJ8-net_pocorall_automaton_DatatypesJ8/src/net/pocorall/automaton/Datatypes.java:805: error: (required.method.not.called) $$ 4 $$ method close $$ new FileReader("src/main/java/Unicode.txt") $$ java.io.FileReader $$ possible exceptional exit due to st.nextToken() with exception type java.io.IOException $$ ( 53246, 53289 ) $$ @MustCall method close may not have been invoked on new FileReader("src/main/java/Unicode.txt") or any of its aliases.
			StreamTokenizer st = new StreamTokenizer(new BufferedReader(new FileReader("src/main/java/Unicode.txt")));
			                                                            ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to st.nextToken() with exception type java.io.IOException
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
3 errors
